--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Bienvenidos a mi Sitio Web</h1>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam sit obcaecati consequatur est at, corporis corrupti voluptas doloribus provident magnam alias tenetur voluptate nobis necessitatibus rerum soluta aut. Nobis, repellendus?
+    </p>
 </body>
 </html>
